# pycatj

./: README.md  pyproject.toml  setup.cfg
pycatj/: cmd.py  pycatj.py
tests/data/: test_1.json  test_1.yaml
