[tool.poetry]
name = "pycatj"
version = "0.1.0"
description = "Displays JSON and YAML files in a flat format (inspired by mattleibow/catj)"
authors = ["David Barroso <dbarrosop@dravetech.com>"]

[tool.poetry.scripts]
pycatj = 'pycatj.cmd:main'

[tool.poetry.dependencies]
python = "^3.6"
"ruamel.yaml" = "^0.15.97"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pylama = "*"
flake8-import-order = "*"
black = {version = "^19.3b0",allows-prereleases = true}
mypy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
